[project]
name = "web-app-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "oratiek", email = "oratiek522@gmail.com" }
]
dependencies = [
    "streamlit>=1.40.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/web_app_test"]
